fix: removed ignoring model from gitignore; I needed it before, I don't need it now